# pysynthgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/pysynthgen-dev/: SKILL.md
.claude/skills/pysynthgen-template/: SKILL.md  profile_sample.py
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_generators.py  bench_sinks.py
src/pysynthgen/: __init__.py  __main__.py  engine.py  generators.py  loader.py  schema.py
src/pysynthgen/sinks/: __init__.py  avro_sink.py  base.py  csv_sink.py  json_sink.py  parquet_sink.py
src/synthgen/: __init__.py  __main__.py  engine.py  generators.py  loader.py  schema.py
src/synthgen/sinks/: __init__.py  avro_sink.py  csv_sink.py  json_sink.py  parquet_sink.py
tests/: test_benchmark.py  test_engine.py  test_schema.py  test_sinks.py
