[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthgen"
version = "0.1.0"
description = "Template-driven synthetic data generation engine (Airflow-agnostic)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohsen Safari", email = "mohsen.safari.6625@gmail.com" }]
keywords = ["synthetic-data", "data-generation", "testing", "faker", "airflow", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "faker>=24.0",
    "rstr>=3.2",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0"]
avro = ["fastavro>=1.9"]
all = ["pyarrow>=15.0", "fastavro>=1.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyarrow>=15.0",
    "fastavro>=1.9",
]

[project.urls]
Homepage = "https://github.com/mohsensafari/synthgen"
Repository = "https://github.com/mohsensafari/synthgen"
Issues = "https://github.com/mohsensafari/synthgen/issues"

[project.scripts]
synthgen = "synthgen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synthgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "fastavro.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bench_sinks"]
ignore_missing_imports = true
