[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysynthgen"
version = "0.1.1"
description = "Template-driven synthetic data generation engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohsen Safari", email = "mohsen.safari.6625@gmail.com" }]
keywords = ["synthetic-data", "data-generation", "testing", "faker", "etl", "mock-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "faker>=24.0",
    "rstr>=3.2",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0"]
avro = ["fastavro>=1.9"]
all = ["pyarrow>=15.0", "fastavro>=1.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyarrow>=15.0",
    "fastavro>=1.9",
]

[project.urls]
Homepage = "https://github.com/mohsensafari/pysynthgen"
Repository = "https://github.com/mohsensafari/pysynthgen"
Issues = "https://github.com/mohsensafari/pysynthgen/issues"

[project.scripts]
pysynthgen = "pysynthgen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pysynthgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "fastavro.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bench_sinks"]
ignore_missing_imports = true

[tool.semantic_release]
# Single source of truth for the version; semantic-release bumps it here.
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
# Pre-1.0: breaking changes bump the minor version instead of jumping to 1.0.0.
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore\\(release\\):.*"]
